multitenancy-benchmarks/restrict-resource-quota-changes/.chainsaw-test/rq-good.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chainsaw-test
spec: {}
