multitenancy-benchmarks/restrict-resource-quota-changes/.chainsaw-test/chainsaw-policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-resource-quota-changes
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
